debt: replace deprecated URL constructor usage with URI.toURL()
Signed-off-by: Fred Bricon <fbricon@gmail.com>